java_binary(
    name = "fuzz_target_mocks",
    srcs = glob(["test/*.java"]),
    create_executable = False,
    visibility = ["//visibility:public"],
    deps = [
        "//agent/src/main/java/com/code_intelligence/jazzer/api",
        "//agent/src/main/java/com/code_intelligence/jazzer/runtime",
        "//agent/src/main/java/com/code_intelligence/jazzer/runtime:coverage_map",
    ],
)
