load("//bazel:cc.bzl", "cc_shared_library")

cc_shared_library(
    name = "native_asan",
    srcs = [
        "com_example_ExampleFuzzerWithNative.cpp",
        "com_example_ExampleFuzzerWithNative.h",
    ],
    copts = [
        "-fsanitize=fuzzer-no-link,address",
    ],
    visibility = ["//examples:__pkg__"],
    deps = [
        "@bazel_tools//tools/jdk:jni",
    ],
)

cc_shared_library(
    name = "native_ubsan",
    srcs = [
        "com_example_ExampleFuzzerWithNative.cpp",
        "com_example_ExampleFuzzerWithNative.h",
    ],
    copts = [
        "-fsanitize=fuzzer-no-link,undefined",
        "-fno-sanitize-recover=all",
        # Workaround for https://github.com/bazelbuild/bazel/issues/11122.
        "-fno-sanitize=vptr,function",
    ],
    visibility = ["//examples:__pkg__"],
    deps = [
        "@bazel_tools//tools/jdk:jni",
    ],
)
