load("//bazel:cc.bzl", "cc_shared_library")

cc_shared_library(
    name = "native_asan",
    srcs = [
        "com_example_ExampleFuzzerWithNative.cpp",
        "com_example_ExampleFuzzerWithNative.h",
    ],
    copts = [
        "-fsanitize=fuzzer-no-link,address",
    ],
    linkopts = select({
        "//:clang_on_linux": ["-fuse-ld=lld"],
        "//conditions:default": [],
    }),
    visibility = ["//examples:__pkg__"],
    deps = [
        "@bazel_tools//tools/jdk:jni",
    ],
)

cc_shared_library(
    name = "native_ubsan",
    srcs = [
        "com_example_ExampleFuzzerWithNative.cpp",
        "com_example_ExampleFuzzerWithNative.h",
    ],
    copts = [
        "-fsanitize=fuzzer-no-link,undefined",
        "-fno-sanitize-recover=all",
    ],
    linkopts = select({
        "//:clang_on_linux": ["-fuse-ld=lld"],
        "//conditions:default": [],
    }),
    visibility = ["//examples:__pkg__"],
    deps = [
        "@bazel_tools//tools/jdk:jni",
    ],
)
