java_library(
    name = "example_seed_corpora",
    resources = glob(["com/example/*Inputs/**"]),
    visibility = ["//examples/junit/src/test/java/com/example:__pkg__"],
)

filegroup(
    name = "MutatorFuzzTestInputs",
    srcs = ["com/example/MutatorFuzzTestInputs"],
    visibility = ["//visibility:public"],
)
